добавил доку для контактов
