# internal/handlers/contacts/contacts.go
@@ -35,6 +35,16 @@ func NewContactHandler(contactService ContactService) *ContactHandler {
 	}
 }
 
+// GetContacts godoc
+// @Summary Получить список контактов
+// @Description Возвращает все контакты текущего пользователя
+// @Tags contacts
+// @Accept json
+// @Produce json
+// @Success 200 {object} dtoApi.ResponseGetContactsSuccessForSwagger "Успешное получение списка контактов"
+// @Failure 401 {object} dtoApi.ApiErrorResponse "Пользователь не авторизован"
+// @Failure 500 {object} dtoApi.ApiErrorResponse "Внутренняя ошибка сервера"
+// @Router /api/v1/contacts [get]
 func (h *ContactHandler) GetContacts(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	userID, ok := r.Context().Value(middleware.UserID).(int64)
@@ -74,6 +84,20 @@ func (h *ContactHandler) GetContacts(w http.ResponseWriter, r *http.Request) {
 	response.Send(w, http.StatusOK, resp)
 }
 
+// CreateContact godoc
+// @Summary Создать контакт
+// @Description Добавляет нового контакта в список контактов текущего пользователя
+// @Tags contacts
+// @Accept json
+// @Produce json
+// @Param request body dto.AddContactRequest true "Запрос на создание контакта"
+// @Success 200 {object} dtoApi.ResponseCreateContactSuccessForSwagger "Контакт успешно создан"
+// @Failure 400 {object} dtoApi.ApiErrorResponse "Некорректный запрос или ошибка валидации"
+// @Failure 401 {object} dtoApi.ApiErrorResponse "Пользователь не авторизован"
+// @Failure 404 {object} dtoApi.ApiErrorResponse "Пользователь не найден"
+// @Failure 409 {object} dtoApi.ApiErrorResponse "Контакт уже существует"
+// @Failure 500 {object} dtoApi.ApiErrorResponse "Внутренняя ошибка сервера"
+// @Router /api/v1/contacts [post]
 func (h *ContactHandler) CreateContact(w http.ResponseWriter, r *http.Request) {
 	defer r.Body.Close()
 	ctx := r.Context()
@@ -181,7 +205,19 @@ func (h *ContactHandler) CreateContact(w http.ResponseWriter, r *http.Request) {
 	response.Send(w, http.StatusCreated, resp)
 }
 
-
+// DeleteContact godoc
+// @Summary Удалить контакт
+// @Description Удаляет контакт из списка контактов текущего пользователя
+// @Tags contacts
+// @Accept json
+// @Produce json
+// @Param contact_user_id path int true "ID пользователя, которого нужно удалить из контактов"
+// @Success 200 {object} dtoApi.ResponseDeleteContactSuccessForSwagger "Контакт успешно удален"
+// @Failure 400 {object} dtoApi.ApiErrorResponse "Некорректный ID контакта"
+// @Failure 401 {object} dtoApi.ApiErrorResponse "Пользователь не авторизован"
+// @Failure 404 {object} dtoApi.ApiErrorResponse "Контакт не найден"
+// @Failure 500 {object} dtoApi.ApiErrorResponse "Внутренняя ошибка сервера"
+// @Router /api/v1/contacts/{contact_user_id} [delete]
 func(h *ContactHandler) DeleteContact(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	userID, ok := r.Context().Value(middleware.UserID).(int64)
